--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@ var debug = {};
     <script>
         /* Define the global variables */
 
+        var sliderPositions = {
+            storeys : []
+        };
+        var sliderSwitch = true;
         var ifcSpaceData = {
             "core": {
                 "data": []
@@ -71,13 +75,12 @@ var debug = {};
         var treeData="";
         /* This gloabal variable is used to get the total count of objects in a building */
         var totObjects = 0;
-        /* Associated with the context switching of Js tree */
-        var process = true;
 
     </script>
-<script type="text/javascript" src="./js/final.js"></script>
-<script type="text/javascript" src="./js/modelcontrols.js"></script>
-<script type="text/javascript" src="./js/bootstrap.js"></script>
+
+    <script type="text/javascript" src="./js/final.js"></script>
+    <script type="text/javascript" src="./js/modelcontrols.js"></script>
+    <script type="text/javascript" src="./js/bootstrap.js"></script>
 
 
 </head>
@@ -111,6 +114,12 @@ var debug = {};
                                     <div id="s2" style="text-align:center">0.00</div>
                                 </div>
 
+                                <!--<div class="col-lg-12">-->
+                                    <!--<h5 style="text-align: center">Transperancy</h5>-->
+                                    <!--<p style="text-align: center" id="selectedNode1"></p>-->
+                                    <!--<div id="slider3"></div>-->
+                                    <!--<div id="s3" style="text-align:center">0.00</div>-->
+                                <!--</div>-->
 
                             </div>
                         </div>
@@ -138,15 +147,63 @@ var debug = {};
             min : -5,
             step: 0.01,
             change : function(event,ui){
-                $('#s2').html(ui.value);
-                var currentVal = ui.value;
-                inc =  currentVal - prevSliderVal;
-                prevSliderVal = ui.value;
-                move();
+
+                if(sliderSwitch){
+                    /* Check if the current node selected is a buildingstorey */
+                    var nodeId = $("#treeViewDiv").jstree("get_selected");
+                    var obj;
+                    /* Check the node Type */
+                    for(var i = 0; i < jsonTree['core']['data'].length; i++) {
+                        obj = jsonTree['core']['data'][i];
+
+                        if(nodeId == obj.id){
+                            nodeType = jsonData['core']['data'][i]['type'];
+                            break;
+                        }
+                    }
+
+                    var posId ;
+                    if(nodeType == "buildingStorey" ){
+                        for(var i = 0; i < sliderPositions.storeys.length; i++) {
+                            if(sliderPositions.storeys[i]['id'] == obj.id ){
+                                posId = i;
+                                break;
+                            }
+                        }
+                    }
+
+
+                    $('#s2').html(ui.value);
+                    var currentVal = ui.value;
+                    inc =  currentVal - sliderPositions.storeys[i]['prevSliderVal'];
+                    prevSliderVal = ui.value;
+                    sliderPositions.storeys[i]['prevSliderVal'] =  ui.value;
+                    move(inc);
+                }
             }
         });
 
     });
+
+    function storeySliderPosition(){
+
+    }
+
+//    $(function() {
+//        $( "#slider3" ).slider({
+//            max : 1,
+//            min : 0,
+//            step: 0.01,
+//            change : function(event,ui){
+//                $('#s3').html(ui.value);
+//                var currentVal = ui.value;
+//                inc =  currentVal - prevSliderVal;
+//                prevSliderVal = ui.value;
+////                move();
+//            }
+//        });
+//
+//    });
     </script>
 
   	<!-- Div for the 3d renderer+ -->
@@ -416,7 +473,7 @@ $.fn.tabbedDialog = function () {
 
 $('#tenant').tabbedDialog();
 
-function move(){
+function move(inc){
     var nodeId = $("#treeViewDiv").jstree("get_selected");
     var nodeType;
     globalMatrix=[];
@@ -462,22 +519,19 @@ function move(){
                         var modelMatrix  = myMatrix.nodes[0].nodes[0].getModelMatrix();
                         modelMatrix[13] += inc;
                         myMatrix.nodes[0].nodes[0].setElements(modelMatrix);
+//                        myMatrix.nodes[0].setAlpha(0.4);
                     }else{
                         var modelMatrix  = myMatrix.nodes[0].getModelMatrix();
                         modelMatrix[13] += inc;
                         myMatrix.nodes[0].setElements(modelMatrix);
+//                        myMatrix.parent.setAlpha(0.4);
                     }
                 }
-
-
-
             }
             allRendered = true;
         }
     });
 };
-
-
 
 function getAllChildElements(parent){
     var childElements = [];
@@ -490,6 +544,32 @@ function getAllChildElements(parent){
     console.log(childElements);
     return childElements;
 }
+
+    function setSliderPositions(){
+        console.log('came to position');
+        if(sliderPositions.storeys.length == 0){
+            for(var i = 0; i < jsonTree['core']['data'].length; i++) {
+                if(jsonTree['core']['data'][i]['type'] == "buildingStorey"){
+                    var pos = {
+                        id : jsonTree['core']['data'][i]['id'],
+                        pos : 0,
+                        prevSliderVal : 0
+                    };
+                    sliderPositions.storeys.push(pos);
+                }
+            }
+        }else{
+            var nodeId = $("#treeViewDiv").jstree("get_selected");
+            for(var i = 0; i < sliderPositions.storeys.length; i++) {
+                if(nodeId == sliderPositions.storeys[i]['id']){
+                    sliderSwitch = false;
+                    $("#slider").slider('value',sliderPositions.storeys[i]['prevSliderVal']);
+                    sliderSwitch = true;
+                    break;
+                }
+            }
+        }
+    }
 
 
 </script>
